# Actix_API_template

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: general-ci-pipeline.yml  security-audit.yml
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: example.rs  mod.rs
tests/api/: health_check.rs  helpers.rs
