[package]
name = "app"
version = "0.1.0"
authors = ["Mohammed (Zack) Salah <zacksalah73@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

# for more info:
# https://github.com/johnthagen/min-sized-rust
# https://github.com/emk/rust-musl-builder
# https://github.com/clux/muslrust
[profile.release]
# strip symbols from the binary to reduce final target size
strip = true
# enable link time optimiztion - to remove dead code and improve target size 
lto = true

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
config = "0.14.0"
once_cell = "1.18.0"
reqwest = "0.12.5"
serde = { version = "1.0.183", features = ["derive"] }
serde-aux = "4.2.0"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
